--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ code span {
     transform: scale(1.2);
 }
 #btemplates-1 .post:hover .post-title a{
-    text-decoration: underline;
+    text-decoration: none;
 }
 #btemplates-1 .post-meta {
     position: absolute;
@@ -235,25 +235,25 @@ code span {
 #btemplates-1 .post-title, #btemplates-1 .post-title a{
     font-weight: bold;
     color: #ffffff;
+    background-color: ;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
     font-size: 5rem;
 }
 #btemplates-1 .post-tags a{
     color:#f9bd4c;
+    background-color: #00000057;
+    border-radius: 18%;
     text-decoration: none;
     font-weight: bold;
     font-size: 2rem;
+    l
 
 }
-#btemplates-1 .post-tags::before{
-    content: "\f07b";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    font-size: 1.7rem;
-}
+
+
 #btemplates-2 .container-fluid, #profile-info .container-fluid{
-    background-color: var(--solarized-base2);
+    background-color: #F1C167;
     padding: 0.75rem;
 }
 #btemplates-tags {
