--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,8 @@ code span {
 }
 #btemplates-1 .post:hover .post-title a{
     text-decoration: none;
+    transform: scale(1.2);
+
 }
 #btemplates-1 .post-meta {
     position: absolute;
@@ -239,6 +241,7 @@ code span {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
     font-size: 5rem;
+    
 }
 #btemplates-1 .post-tags a{
     color:#f9bd4c;
@@ -247,10 +250,22 @@ code span {
     text-decoration: none;
     font-weight: bold;
     font-size: 2rem;
-    l
+    margin-left: 75%;
 
 }
+#btemplates-1 .post-tags1 a{
+    color:#f9bd4c;
+    background-color: #00000057;
+    border-radius: 18%;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 2rem;
+    margin-left :0;
 
+}
+#btemplates-1 .post:hover .post-tags1 a{
+    text-decoration: ;
+}
 
 #btemplates-2 .container-fluid, #profile-info .container-fluid{
     background-color: #F1C167;
@@ -818,7 +833,7 @@ ol#top-ra, ol.thread-chrome {
 }
 #back-top {
     position: fixed;
-    right: 20px;
+    right: 100px;
     bottom: 20px;
     z-index: 1041;
     width: 40px;
