--- a/css/style.css
+++ b/css/style.css
@@ -263,8 +263,9 @@ code span {
     margin-left :0;
 
 }
-#btemplates-1 .post:hover .post-tags1 a{
-    text-decoration: ;
+#bte
+plates-1 .post:hover .post-tags1 a{
+    text-decoration:n ;
 }
 
 #btemplates-2 .container-fluid, #profile-info .container-fluid{
@@ -351,7 +352,7 @@ code span {
  * Slider
  */
 #btemplates-slider {
-    padding: 1.5rem;
+    padding: 0.25rem;
     position: relative;
 }
 #btemplates-slider > svg {
@@ -367,7 +368,7 @@ code span {
     font-weight: 600;
 }
 #btemplates-slider .widget-content {
-    text-align: left;
+    text-align: center;
 }
 #btemplates-slider .carousel-caption {
     background-color: rgba(17, 17, 17, 0.5);
@@ -375,25 +376,25 @@ code span {
     border-radius: 1rem;
 }
 #btemplates-slider .carousel-caption a {
-    color: #fff;
+    color: #ffffff;
 }
 #btemplates-slider .carousel-item img, #btemplates-slider .carousel-item svg {
     object-fit: cover;
-    max-height: 550px;
+    max-height: 700px;
     border-radius: 1rem;
 }
 #btemplates-3 {
     margin-bottom: -2px;
 }
 #btemplates-3 .post:hover .post-thumb img{
-    transform: scale(1.1);
+    transform: scale(1.0);
 }
 #btemplates-3 .post:hover .post-title{
     text-decoration: underline;
     color: var(--solarized-red);
 }
 #btemplates-3 .container-fluid, #comments .container-fluid{
-    background-color: #073642;
+    background-color: #F1C167;
     padding: 1rem 0;
     color: var(--solarized-base3);
 }
@@ -1141,7 +1142,7 @@ ul.btemplates-tags li a {
     text-align: center;
     display: block;
     padding: 2rem;
-    background-color: #999;
+    background-color: #ff0000;
     margin-bottom: 0.5rem;
     object-fit: cover;
     background-repeat: no-repeat;
@@ -1697,6 +1698,7 @@ ul.btemplates-tags li a:hover span {
     }
     #btemplates-1 .row {
         min-height: 619px;
+        
     }
     #btemplates-1 .col-md-6 .post {
         height: 619px;
