--- a/css/style.css
+++ b/css/style.css
@@ -364,11 +364,31 @@ plates-1 .post:hover .post-tags1 a{
    
     max-width: 2000px;
  }
+ #post-author1-label
+ {
+   margin-bottom: ;
+    max-width: 2000px;
+ }
+ .samy{
+    font-weight: 20rem;
+    font-size: 1.25rem;
+ }
+ 
  .post-author-label{
     color: #F1C167;
     background-color: #000000;
     max-width: 20px;
     font-size: 1.5rem;
+    border-radius: 10%;
+ }
+ .post-author1-label{
+    color: #F1C167;
+    background-color: #000000;
+    max-width: 20px;
+    margin-top: 100%;
+    font-size: 1.5rem;
+    transform: translateY();
+    margin-left:33% ;
     border-radius: 10%;
  }
 #btemplates-slider {
