--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,8 @@ plates-1 .post:hover .post-tags1 a{
  }
  .samy{
     font-weight: 20rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
+   maxwidth: 100%;
  }
  
  .post-author-label{
@@ -634,7 +635,7 @@ blockquote p:first-child:first-letter {
     padding-right: 0.5rem;
 }
 .post-body img {
-    max-width: 100%;
+    width: 150%;
     height: auto;
     border-radius: 5px;
 }
